// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cmds:install - with initialized workspace and module installs a module package 1`] = `
{
  "author": "CI Test User <ci@example.com>",
  "bugs": {
    "url": "https://github.com/undefined/undefined/issues",
  },
  "dependencies": {
    "@webql/base32": "1.2.1",
  },
  "description": "undefined",
  "homepage": "https://github.com/undefined/undefined",
  "keywords": [],
  "license": "SEE LICENSE IN LICENSE",
  "main": "index.js",
  "module": "esm/index.js",
  "name": "undefined",
  "publishConfig": {
    "access": "undefined",
    "directory": "dist",
  },
  "repository": {
    "type": "git",
    "url": "https://github.com/undefined/undefined",
  },
  "scripts": {
    "build": "pnpm run clean; tsc -p tsconfig.json; tsc -p tsconfig.esm.json; pnpm run copy",
    "build:dev": "pnpm run clean; tsc -p tsconfig.json --declarationMap; tsc -p tsconfig.esm.json; pnpm run copy",
    "clean": "rimraf dist/**",
    "copy": "copyfiles -f ../../LICENSE README.md package.json dist",
    "lint": "eslint . --fix",
    "prepare": "pnpm run build",
    "test": "jest",
    "test:watch": "jest --watch",
  },
  "types": "index.d.ts",
  "version": "0.0.1",
}
`;

exports[`cmds:install - with initialized workspace and module installs a module package 2`] = `
[
  "../../extensions/@webql/base32/LICENSE",
  "../../extensions/@webql/base32/Makefile",
  "../../extensions/@webql/base32/deploy/schemas/base32/procedures/decode.sql",
  "../../extensions/@webql/base32/deploy/schemas/base32/procedures/encode.sql",
  "../../extensions/@webql/base32/deploy/schemas/base32/schema.sql",
  "../../extensions/@webql/base32/jest.config.js",
  "../../extensions/@webql/base32/launchql.plan",
  "../../extensions/@webql/base32/package.json",
  "../../extensions/@webql/base32/readme.md",
  "../../extensions/@webql/base32/revert/schemas/base32/procedures/decode.sql",
  "../../extensions/@webql/base32/revert/schemas/base32/procedures/encode.sql",
  "../../extensions/@webql/base32/revert/schemas/base32/schema.sql",
  "../../extensions/@webql/base32/sql/webql-base32--1.2.1.sql",
  "../../extensions/@webql/base32/src/base32.ts",
  "../../extensions/@webql/base32/src/index.ts",
  "../../extensions/@webql/base32/test/__snapshots__/base32.decode.test.ts.snap",
  "../../extensions/@webql/base32/test/__snapshots__/base32.encode.test.ts.snap",
  "../../extensions/@webql/base32/test/base32.decode.test.ts",
  "../../extensions/@webql/base32/test/base32.encode.test.ts",
  "../../extensions/@webql/base32/tsconfig.esm.json",
  "../../extensions/@webql/base32/tsconfig.json",
  "../../extensions/@webql/base32/verify/schemas/base32/procedures/decode.sql",
  "../../extensions/@webql/base32/verify/schemas/base32/procedures/encode.sql",
  "../../extensions/@webql/base32/verify/schemas/base32/schema.sql",
  "../../extensions/@webql/base32/webql-base32.control",
]
`;

exports[`cmds:install - with initialized workspace and module installs a module package 3`] = `
"# my-module extension
comment = 'my-module extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-module'
requires = 'plpgsql,uuid-ossp,webql-base32'
relocatable = false
superuser = false
"
`;

exports[`cmds:install - with initialized workspace and module installs two modules 1`] = `
{
  "author": "CI Test User <ci@example.com>",
  "bugs": {
    "url": "https://github.com/undefined/undefined/issues",
  },
  "dependencies": {
    "@webql/base32": "1.2.1",
    "@webql/utils": "1.1.2",
  },
  "description": "undefined",
  "homepage": "https://github.com/undefined/undefined",
  "keywords": [],
  "license": "SEE LICENSE IN LICENSE",
  "main": "index.js",
  "module": "esm/index.js",
  "name": "undefined",
  "publishConfig": {
    "access": "undefined",
    "directory": "dist",
  },
  "repository": {
    "type": "git",
    "url": "https://github.com/undefined/undefined",
  },
  "scripts": {
    "build": "pnpm run clean; tsc -p tsconfig.json; tsc -p tsconfig.esm.json; pnpm run copy",
    "build:dev": "pnpm run clean; tsc -p tsconfig.json --declarationMap; tsc -p tsconfig.esm.json; pnpm run copy",
    "clean": "rimraf dist/**",
    "copy": "copyfiles -f ../../LICENSE README.md package.json dist",
    "lint": "eslint . --fix",
    "prepare": "pnpm run build",
    "test": "jest",
    "test:watch": "jest --watch",
  },
  "types": "index.d.ts",
  "version": "0.0.1",
}
`;

exports[`cmds:install - with initialized workspace and module installs two modules 2`] = `
"# my-module extension
comment = 'my-module extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-module'
requires = 'plpgsql,uuid-ossp,webql-base32,webql-utils'
relocatable = false
superuser = false
"
`;
